--- a/mainframe/playbook.yml
+++ b/mainframe/playbook.yml
@@ -14,42 +14,10 @@
     - coaxial.base
 
   tasks:
-    - name: Refresh apt cache
-      apt:
-        update_cache: true
-        cache_valid_time: 216000 # 1 day
-
-    - name: Install nfs
-      package:
-        name: nfs-kernel-server
-        state: latest
-
-    - name: Configure exports
-      template:
-        src: templates/exports.j2
-        dest: /etc/exports
-        mode: 0644
-        owner: root
-        group: root
-      notify:
-        - restart nfs server
-
-    - name: Install ufw
-      package:
-        name: ufw
-        state: latest
-
-    - name: Open firewall ports
-      ufw:
-        from_ip: "{{ ansible_default_ipv4.network }}/24"
-        from_port: 2049
-        policy: allow
-        proto: tcp
-        state: reloaded
+  - include: refresh_apt_cache.yml
+  - include: file_server.yml
+  - include: vm_host.yml
 
   handlers:
-    - name: restart nfs server
-      service:
-        name: nfs-kernel-server
-        state: restarted
-
+  - include: file_server_handlers.yml
+  - include: vm_host_handlers.yml
