--- a/mainframe/playbook.yml
+++ b/mainframe/playbook.yml
@@ -7,7 +7,8 @@
   pre_tasks:
     - name: Install python for Ansible
       raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
-      changed_when: false
+      register: bootstrap_python
+      changed_when: bootstrap_python.stdout != ''
     - include: hostname.yml
     - setup:
 
