--- a/mainframe/playbook.yml
+++ b/mainframe/playbook.yml
@@ -2,6 +2,8 @@
 - hosts: all
   become: true
   gather_facts: false
+  vars_files:
+    - vars.yml
 
   # bootstrap python2
   pre_tasks:
@@ -21,6 +23,3 @@
     - include: refresh_apt_cache.yml
     - include: file_server.yml
     - include: vm_host.yml
-
-  handlers:
-    - include: vm_host_handlers.yml
