Launch new VMs based on a template (#12)
* Create base VM if not defined

* Clone template to new VM

* Make vm portable

Setting the CPU to host model so there is no problem when transferring the VM to a new host with a different CPU architecture

* Configure new vm hardware specs

* Start new VM and use variables

* Update tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,3 +24,4 @@ script:
   # verify syntax
   - 'docker exec --tty "$(cat ${container_id})" env TERM=xterm ANSIBLE_VAULT_PASSWORD_FILE=/etc/ansible/playbooks/.vault_pass ansible-playbook /etc/ansible/playbooks/mainframe/playbook.yml --syntax-check'
   - 'docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible-playbook /etc/ansible/playbooks/restore-vm/playbook.yml --syntax-check'
+  - 'docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible-playbook /etc/ansible/playbooks/new-vm/playbook.yml --syntax-check'
