Add munin master configuration (#21)
* Setup apache

* Setup munin

* Rename playbook

* Update tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ script:
   - 'docker run --detach --volume=/home/travis/.ssh:/home/root/.ssh:ro --volume="${PWD}":/etc/ansible/playbooks/:ro ${run_opts} geerlingguy/docker-${distro}-ansible:latest "${init}" > "${container_id}"'
   - 'docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible-galaxy install -r /etc/ansible/playbooks/mainframe/requirements.yml'
   - 'docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible-galaxy install -r /etc/ansible/playbooks/edms/requirements.yml'
+  - 'docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible-galaxy install -r /etc/ansible/playbooks/munin/requirements.yml'
   # verify syntax
   - 'docker exec --tty "$(cat ${container_id})" env TERM=xterm ANSIBLE_VAULT_PASSWORD_FILE=/etc/ansible/playbooks/.vault_pass ansible-playbook /etc/ansible/playbooks/mainframe/playbook.yml --syntax-check'
   - 'docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible-playbook /etc/ansible/playbooks/restore-vm/playbook.yml --syntax-check'
@@ -30,3 +31,4 @@ script:
   - 'docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible-playbook /etc/ansible/playbooks/delete-vm/playbook.yml --syntax-check'
   - 'docker exec --tty "$(cat ${container_id})" env TERM=xterm ANSIBLE_VAULT_PASSWORD_FILE=/etc/ansible/playbooks/edms/.vault_pass ansible-playbook /etc/ansible/playbooks/edms/playbook.yml --syntax-check'
   - 'docker exec --tty "$(cat ${container_id})" env TERM=xterm ANSIBLE_VAULT_PASSWORD_FILE=/etc/ansible/playbooks/edms/.vault_pass ansible-playbook /etc/ansible/playbooks/edms/restore-backup.yml --syntax-check'
+  - 'docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible-playbook /etc/ansible/playbooks/munin/master.yml --syntax-check'
