--- a/munin/master.yml
+++ b/munin/master.yml
@@ -77,6 +77,7 @@
         job: "sudo -u munin /usr/bin/munin-cron"
 
     - name: Initial data update
+      become: yes
       become_user: munin
       command: "/usr/bin/munin-cron"
       args:
