--- a/munin/master.yml
+++ b/munin/master.yml
@@ -26,7 +26,7 @@
     - name: Make sure fcgid module is enabled
       apache2_module:
         name: fcgid
-        state:  present
+        state: present
 
     - name: Install munin
       package:
@@ -77,7 +77,7 @@
         job: "sudo -u munin /usr/bin/munin-cron"
 
     - name: Initial data update
-      become: yes
+      become: true
       become_user: munin
       command: "/usr/bin/munin-cron"
       args:
