Add missing param

--- a/downloader/playbook.yml
+++ b/downloader/playbook.yml
@@ -38,8 +38,9 @@
     # nginx returns 502 for some services if it isn't destroyed and rebuilt
     - name: Destroy and rebuild proxy container
       docker_service:
+        project_src: "{{ dest_path }}"
         services:
           - proxy
         recreate: always
         state: present
-      when: rds__files_copied.changed or rds__git_clone.changed
+        when: rds__files_copied.changed or rds__git_clone.changed
