wip extract role

--- a/mailcow/install.yml
+++ b/mailcow/install.yml
@@ -1,98 +1,8 @@
 ---
 - hosts: all
   become: true
-  vars:
-    rds__src_repo: https://github.com/coaxial/docker-downloader.git
-    rds__src_repo_version: deploy
-    downloader__media_path: /media/storage/nas
-    downloader__scratch_path: /media/scratch/downloader
-    downloader__tarsnap_key_path: ./files/tarsnap.key
-    downloader__tarsnap_key_dest: /opt/docker-downloader/files/
 
-  tasks:
-    - name: Enable firewall
-      ufw:
-        state: enabled
-        policy: deny
-
-    - name: Open ports
-      ufw:
-        rule: allow
-        port: "{{ item }}"
-      with_items:
-        - 25
-        - 80
-        - 110
-        - 143
-        - 443
-        - 465
-        - 587
-        - 993
-        - 995
-        - 4190
-
-    - name: Synchronize time
-      copy:
-        src: files/timesyncd.conf
-        dest: /etc/systemd/timesyncd.conf
-        mode: 0644
-
-    - name: Clone mailcow repo
-      git:
-        repo: 'https://github.com/mailcow/mailcow-dockerized'
-        umask: 022
-        update: true
-        dest: /opt/mailcow-dockerized
-
-    - name: Copy mailcow settings file
-      copy:
-        src: files/mailcow.conf
-        dest: /opt/mailcow-dockerized/mailcow.conf
-        mode: 0400
-
-    - name: Create mailcow backup directory
-      file:
-        path: /var/backup
-        mode: 0700
-        state: directory
-        owner: root
-        group: root
-
-    - name: Enable backup generation
-      cron:
-        name: generate mailcow backup
-        job: 'BACKUP_LOCATION=/var/backup /opt/mailcow-dockerized/helper-scripts/backup_and_restore.sh backup all'
-        special_time: hourly
-        state: present
-
-    - name: Clone borgmatic docker repo
-      git:
-        repo: 'https://github.com/coaxial/docker-borgmatic'
-        update: true
-        dest: /opt/docker-borgmatic
-
-    - name: Copy ssh and borg keys, borgmatic config file
-      copy:
-        src: "files/{{ item }}"
-        dest: "/opt/docker-borgmatic/{{ item }}"
-        mode: 0400
-        owner: root
-        group: root
-      with_items:
-        - borgmatic/backup_rsa
-        - borgmatic/backup_rsa.pub
-        - borgmatic/config.yaml
-        - borgmatic/passphrase
-        - borgmatic/.jobber
-
-    - name: Start remote backups service
-      docker_service:
-        project_src: /opt/docker-borgmatic
-        pull: true
-        state: present
-
-    - name: Start mailcow
-      docker_service:
-        project_src: /opt/mailcow-dockerized
-        pull: true
-        state: present
+  roles:
+    - coaxial.base
+    - angstwad.docker_ubuntu
+    - ../mailcow-role
