--- a/mailserver/install.yml
+++ b/mailserver/install.yml
@@ -17,7 +17,7 @@
     - name: Install python for Ansible
       raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
       register: bootstrap_python
-      changed_when: bootstrap_python.stdout != ''
+      changed_when: bootstrap_python.stdout != '\n'
     - setup:
 
   roles:
