Update role name

--- a/mailserver/install.yml
+++ b/mailserver/install.yml
@@ -24,4 +24,4 @@
     - coaxial.base
     - geerlingguy.pip
     - geerlingguy.docker
-    - ../../ansible-role-mailcow
+    - coaxial.ansible-role-mailcow
