--- a/healthchecks/restore.yml
+++ b/healthchecks/restore.yml
@@ -3,16 +3,14 @@
   become: true
   vars_files:
     - vars/hc.yml
-  vars:
-    hc__db_name: hc
-    hc__enable_backups: true
-    hc__testing: false
 
   tasks:
-    - name: Stop containers
+    - name: Stop database
       docker_service:
         project_src: /opt/docker-healthchecks
-        state: absent
+        services:
+          - db
+        state: present
         stopped: true
 
     - name: Create temp backup dir
@@ -51,7 +49,7 @@
         "
       register: pg_version
 
-    - name: Restore backup
+    - name: Restore database
       docker_container:
         image: postgres:{{ pg_version.stdout_lines[0] }}
         name: restore-backup
@@ -76,12 +74,12 @@
         path: /hc-backup
         state: absent
 
-    - name: Restart app
+    - name: Restart database
       docker_service:
         project_src: /opt/docker-healthchecks
-        pull: true
+        services:
+          - db
         state: present
-        restarted: true
       when: not hc__testing
 
     - name: Disable backups
