--- a/taskserver/install.yml
+++ b/taskserver/install.yml
@@ -5,26 +5,21 @@
   vars_files:
     - vars.yml
   vars:
-    host_base_required: true  # host is blank and needs base config
+    bootstrap_host: true  # enable if host needs python, firewall, etc.
     pip_install_packages:
       - name: docker
       - name: docker-compose
 
   tasks:
-    - name: Install python for Ansible
-      raw: >
-        test -e /usr/bin/python ||
-        (apt -y update && apt install -y python-minimal)
-      changed_when: false
-    - setup:
-
     - name: Configure host
       include_role:
         name: "{{ rolevar.name }}"
       when: rolevar.when
       with_items:
+        - name: coaxial.raw-python
+          when: "{{ bootstrap_host }}"
         - name: coaxial.base
-          when: host_base_required
+          when: "{{ bootstrap_host }}"
         - name: geerlingguy.pip
         - name: geerlingguy.docker
         - name: coaxial.taskserver
