--- a/prometheus-node-exporter/install.yml
+++ b/prometheus-node-exporter/install.yml
@@ -24,16 +24,17 @@
         - name: geerlingguy.pip
         - name: geerlingguy.docker
         - name: coaxial.node-exporter
+        - name: ../../ansible-role-docker-proxy
       loop_control:
         loop_var: rolevar
 
-    - name: Install ufw
-      package:
-        name: ufw
-        state: present
+    # - name: Install ufw
+    #   package:
+    #     name: ufw
+    #     state: present
 
-    - name: Open ports
-      ufw:
-        port: 9100
-        proto: tcp
-        rule: allow
+    # - name: Open ports
+    #   ufw:
+    #     port: 9100
+    #     proto: tcp
+    #     rule: allow
