--- a/mainframe/tasks/zfs.yml
+++ b/mainframe/tasks/zfs.yml
@@ -5,9 +5,18 @@
     state: present
   when: zfs_enable
 
+- name: Check if pool already imported
+  shell: "zpool status {{ zpool_name }} >/dev/null 2>&1 && echo 'True' || echo 'False'"
+  register: zpool_imported_test_cmd
+  changed_when: false
+
+- name: Save pool import status as fact
+  set_fact:
+    zpool_already_imported: "{{ zpool_imported_test_cmd.stdout |bool }}"
+
 - name: Import zfs pool
   command: "zpool import {{ zpool_name }}"
-  when: zfs_enable
+  when: zfs_enable and not zpool_already_imported
 
 - name: Configure zfs mount points
   zfs:
@@ -16,7 +25,7 @@
       mountpoint: "{{ item.mountpoint }}"
       canmount: "{{ item.canmount }}"
     state: present
-  when: zfs_enable
+  when: zfs_enable and not zpool_already_imported
   with_items: "{{ zfs_datasets }}"
 
 - name: Configure nfs sharing
@@ -25,8 +34,8 @@
     extra_zfs_properties:
       sharenfs: "no_subtree_check,all_squash,rw=@{{ ansible_default_ipv4.network }}/24"
     state: present
-  when: zfs_enable
+  when: zfs_enable and not zpool_already_imported
 
 - name: Enable zfs shares
   command: "zfs share -a"
-  when: zfs_enable
+  when: zfs_enable and not zpool_already_imported
