--- a/mainframe/tasks/zfs.yml
+++ b/mainframe/tasks/zfs.yml
@@ -26,6 +26,31 @@
   command: "zpool import {{ zpool_name }}"
   when: not zpool_already_imported
 
+- name: Get zfs auto snapshot (from source)
+  unarchive:
+    src: https://github.com/zfsonlinux/zfs-auto-snapshot/archive/master.tar.gz
+    dest: /tmp
+    remote_src: true
+  when: ansible_distribution_version is version('18.04', '<')
+
+- name: Install zfs auto snapshot (from source)
+  make:
+    chdir: /tmp/zfs-auto-snapshot-master
+    target: install
+  when: ansible_distribution_version is version('18.04', '<')
+
+- name: Cleanup zfs auto snapshot files (from source)
+  file:
+    path: /tmp/zfs-auto-snapshot-master
+    state: absent
+  when: ansible_distribution_version is version('18.04', '<')
+
+- name: Install zfs auto snapshot (from package)
+  package:
+    name: zfs-auto-snapshot
+    state: present
+  when: ansible_distribution_version is version('18.04', '>=')
+
 - name: Configure zfs mount points
   zfs:
     name: "{{ item.name }}"
